--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /.idea/
 /HackerEarth Practice Problems.iml
 /out/production/HackerEarth Practice Problems/PerfectNumber.class
+/out/production/HackerEarth Practice Problems/PairSums.class
