- So apparently dynamic programming was completely unnecessary here! The answer is simple and straightforward if you understand the question well. Any smallest common substring(s) between two strings, if present, will have length 1, since even if a common substring of length 2 or more is present, that would mean that each of the single characters in the substrings is common and therefore the smallest length is always 1! - Came to this conclusion after digging deep into number of minimum calls that would be needed to find all distinct substrings of a string and that value for a string of size 10^5 is at least 2^(10^5)+ which is impossible to run. Therefore, there had to be an alternate solution, and it turns out that we didn't need to find all distinct substrings at all! Just two linear time for loops, one for looping through characters (since char length of 1 is min) in B and storing them in HashMap and other for looping through A and doing a constant lookup in the HashMap. Therefore, the code ends up having O(n) time complexity where n is max(|A|,|B|)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /HackerEarth Practice Problems.iml
 /out/production/HackerEarth Practice Problems/PerfectNumber.class
 /out/production/HackerEarth Practice Problems/PairSums.class
+/out/production/HackerEarth Practice Problems/
